--- a/style.css
+++ b/style.css
@@ -212,10 +212,14 @@ body {
     padding: 15px;
     margin-top: 20px;
     border-radius: 10px;
+    display:flex;
+    align-items:center;
+    transform:scale(1);
 }
 
 .pg2 .btns button:hover {
     cursor: pointer;
+    transform:scale(1.2);
 }
 
 .pg2 .btns button a {
