--- a/style.css
+++ b/style.css
@@ -223,7 +223,8 @@ body {
 }
 
 .pg2 .btns button a {
-    display: block;
+    display: flex;
+    align-items: center;
     color: #ffffff;
     text-decoration: none;
     font-size: 18px;
