--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 body,
 html {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: #171717;
     scrollbar-color: #ffd52b #0000008b;
@@ -38,7 +38,7 @@ body {
     font-size: 30px;
     border-radius: 100px;
     backdrop-filter: blur(5px);
-    opacity:1;
+    opacity: 1;
 }
 
 .crsr::selection {
@@ -46,6 +46,7 @@ body {
 }
 
 .nav {
+    margin-top: -20vh;
     z-index: 998;
     position: fixed;
     display: flex;
@@ -84,9 +85,11 @@ body {
     font-size: 20px;
 }
 
-.pg1 {
+.pg1,
+.propg,
+.pg2 {
     width: 100%;
-    min-height: 100vh;
+    margin: 20vh 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -97,8 +100,10 @@ body {
     margin-left: 4px;
 }
 
-.pg1 .card {
+.pg1 .card,
+.propg .card {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 1000px;
@@ -145,27 +150,9 @@ body {
     color: #ffd52b;
 }
 
-.propg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 100px 0;
-    font-size: 25px;
-    width: 100%;
-    text-align: center;
-    font-weight: 600;
-    color: #ffd52b;
-}
 
 .pg2 {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #171717;
     color: #dfdfdf;
-    text-align: center;
 }
 
 .pg2 .card {
@@ -212,20 +199,20 @@ body {
     padding: 15px;
     margin-top: 20px;
     border-radius: 10px;
-    display:flex;
-    flex-direction:column;
-    transform:scale(1);
+    display: flex;
+    flex-direction: column;
+    transform: scale(1);
 }
 
 .pg2 .btns button:hover {
     cursor: pointer;
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
 
 .pg2 .btns button a {
     display: flex;
-    justify-items:space-between;
-    width:280px;
+    justify-items: space-between;
+    width: 280px;
     align-items: center;
     color: #ffffff;
     text-decoration: none;
