--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+    --bg: #100F0F;
+    --primary: #DDA853;
+    --accent: #16404D;
+    --text: #FBF5DD;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,22 +12,24 @@
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+
+    &::selection {
+        background-color: transparent;
+        font-family: serif;
+    }
+
 }
 
-*::selection {
-    background-color: #dfdfdf;
-    color: #171717;
-}
 
 *:focus {
-    background-color: #171717;
+    background-color: var(--bg);
 }
 
 body,
 html {
     height: 100vh;
-    width: 100%;    
-    background: #171717;
+    width: 100%;
+    background: var(--bg);
     cursor: none;
 }
 
@@ -33,7 +42,7 @@ html {
 }
 
 .bodycontainer::-webkit-scrollbar-thumb {
-    background-color: #ffd52b;
+    background-color: var(--primary);
 }
 
 body {
@@ -43,17 +52,13 @@ body {
 .crsr {
     position: fixed;
     z-index: 999;
-    background-color: #0000008b;
-    color: #ffd52b;
+    background-color: var(--bg);
+    color: var(--primary);
     padding: 15px;
     font-size: 30px;
     border-radius: 100px;
     backdrop-filter: blur(5px);
     opacity: 1;
-}
-
-.crsr::selection {
-    background-color: #000000;
 }
 
 .nav {
@@ -64,19 +69,19 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0.5vh 5vw;
-    background-color: #0000008b;
-    color: #dfdfdf;
+    background-color: var(--bg);
+    color: var(--text);
     backdrop-filter: blur(15px);
     font-size: 20px;
 }
 
 .nav h4:hover {
-    color: #ffd52b;
+    color: var(--primary);
     transform: scale(1.1);
 }
 
 .nav button a:hover {
-    color: #ffd52b;
+    color: var(--primary);
     transform: scale(1.1);
 }
 
@@ -89,7 +94,7 @@ body {
 }
 
 .nav button a {
-    color: #dfdfdf;
+    color: var(--text);
     text-decoration: none;
     font-size: 20px;
 }
@@ -121,7 +126,7 @@ body {
 
 .propg h1 {
     font-size: 8vmin;
-    color: #ffd52b;
+    color: var(--primary);
     text-transform: uppercase;
 }
 
@@ -141,7 +146,7 @@ body {
     border: #ffffff1c 1px solid;
     border-radius: 30px;
     gap: 50px;
-    color: #dfdfdf;
+    color: var(--text);
     background-color: #ffffff1c;
     backdrop-filter: blur(20px);
 }
@@ -159,12 +164,12 @@ body {
 
 .pg1 .headc h1 {
     font-weight: 600;
-    color: #ffd52b;
+    color: var(--primary);
 }
 
 .pg1 .headc h3 {
     font-weight: 500;
-    color: #fff;
+    color: var(--text);
 }
 
 .pg1 .card .intro {
@@ -177,19 +182,19 @@ body {
 
 .pg1 .intro h1 {
     font-weight: 600;
-    color: #ffd52b;
+    color: var(--primary);
 }
 
 
 .pg2 {
-    color: #dfdfdf;
+    color: var(--text);
 }
 
 .pg2 .card {
     width: 1000px;
-    background-color: #ffffff1c;
+    background-color: var(--accent);
     backdrop-filter: blur(20px);
-    border: #ffffff1c 1px solid;
+    border: var(--accent) 1px solid;
     border-radius: 30px;
     min-width: 300px;
     height: 400px;
@@ -198,11 +203,6 @@ body {
     flex-direction: column;
     justify-content: space-around;
     font-size: 30px;
-}
-
-.pg1 h1::selection {
-    color: #1e1e1e;
-    background-color: #ffd52b;
 }
 
 .pg2 h3 {
@@ -225,7 +225,7 @@ body {
 
 .pg2 .btns button {
     border: none;
-    background-color: #535353;
+    background-color: var(--accent);
     margin-top: 20px;
     border-radius: 10px;
     display: flex;
@@ -236,7 +236,7 @@ body {
 }
 
 .pg2 .btns button:hover {
-    transform: scale(1.02);
+    transform: scale(1.0025);
 }
 
 .pg2 .btns button a {
@@ -246,7 +246,7 @@ body {
     justify-content: space-between;
     width: 100%;
     align-items: center;
-    color: #ffffff;
+    color: var(--text);
     text-decoration: none;
     font-size: 18px;
     font-weight: 700;
@@ -254,17 +254,12 @@ body {
 
 b {
     font-weight: 650;
-    color: #ffd52b;
-}
-
-b::selection {
-    background-color: #171717;
-    color: #ffd52b;
+    color: var(--primary);
 }
 
 
 .footer {
-    color: #dfdfdf;
+    color: var(--text);
     position: absolute;
     bottom: 0;
     margin-bottom: 10px;
@@ -282,7 +277,7 @@ b::selection {
         width: 100%;
         border-radius: 0;
         border: 0;
-        background-color: #171717;
+        background-color: var(--bg);
     }
 
     .nav {
